--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PolityCorrect">
         <activity
+            android:name=".UserDetails"
+            android:exported="false" />
+        <activity
             android:name=".Signin"
             android:exported="false" />
         <activity
