--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PolityCorrect">
         <activity
+            android:name=".Statistics"
+            android:exported="false" />
+        <activity
+            android:name=".HomeParliament"
+            android:exported="false" />
+        <activity
             android:name=".UserDetails"
             android:exported="false" />
         <activity
@@ -28,7 +34,7 @@
             android:name=".Settings"
             android:exported="false" />
         <activity
-            android:name=".Home"
+            android:name=".HomeCitizen"
             android:exported="false" />
         <activity
             android:name=".Login"
