--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/Theme.PolityCorrect">
+        android:theme="@style/Theme.PolityCorrect"
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".ChooseResultUsers"
+            android:exported="false" />
         <activity
             android:name=".Statistics"
             android:exported="false" />
