--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,12 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:29.0.2')
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
+    //Notification
+    implementation 'com.android.volley:volley:1.2.1'
+    implementation 'com.google.firebase:firebase-installations:17.0.0'
+    implementation 'com.google.firebase:firebase-messaging'
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-messaging:23.0.0'
+
 }
