--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-messaging:23.0.0'
 
+    //Barchart
+    implementation 'com.github.PhilJay:MPAndroidChart:v2.2.4'
 }
+
