--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:20.0.3'
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
     implementation 'androidx.navigation:navigation-ui:2.3.5'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -58,5 +59,8 @@ dependencies {
 
     //Barchart
     implementation 'com.github.PhilJay:MPAndroidChart:v2.2.4'
+
+    //Tabs Swipe Layout
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
 }
 
